tests/parser/fail/malformed-kw-unary.som
"test:
failMessage:
  contains: keyword selector
"

MalformedKwUnary = (
  run = (
    #foo:bar.
  )
)
